package domain.service.student506;

public class AnEvent {

    public static int GoddessOfVictory() {

        // これはここに実装する？・・・勝利の女神。キッカーかキーパーのどちらかにポイントを５加算する
        return 0;
    }

    public static boolean FatefulMischief() {

        // これはここに実装する？・・・運命の悪戯。勝利条件をポイント累積結果ではなく、キッカーとキーパーのポイント累積結果を合計して、合計が奇数ならキッカーの勝利、偶数ならキーパーの勝利とする。
        return true;

    }
}
