package domain.service.student506;

public interface ILife {

    void story();
    boolean scene();
    void epilogue();
}
