package domain.service.student506;

public interface ITask {

    void run();

    public enum LuckOfTime {

        Goddess_of_Victory,
        Fateful_Mischief
    }
}
