package domain.service.student506;

public class MyLife extends ALife {
}
